--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WhooshAlchemy==0.56
 Flask-WTF==1.0.0
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.10.1
 importlib-resources==5.4.0
@@ -23,6 +24,7 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 mistune==2.0.2
 Pillow==9.0.0
+psycopg2-binary==2.9.3
 pycodestyle==2.8.0
 PyJWT==2.3.0
 pyrsistent==0.18.1
